--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <h1>dosvidanya lozhka</h1>
+    <img src="https://misha4857.github.io/08obama_xp-articleLarge.jpg" alt="альтернативный текст">
   </body>
 
 </html>
