--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <h1>dosvidanya lozhka</h1>
     <img src="https://misha4857.github.io/08obama_xp-articleLarge.jpg" alt="альтернативный текст">
+   <audio controls>
+  
+    <source src="https://misha4857.github.io/Hard.mp3" type="audio/mpeg">
+    Тег audio не поддерживается вашим браузером. 
+    <a href="https://misha4857.github.io/Hard.mp3">Скачайте музыку</a>.
+  </audio>
   </body>
 
 </html>
