--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
      <li>Кукуруза Горячая</li>
    </ul>
    <hr>
+    <iframe src="https://www.preceden.com/timelines/507576/embed" width="100%" height="524" frameborder="0">
+  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
+</iframe>
   </body>
 
 </html>
